<resources>
    <string name="app_name">Na-at People</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="label_notifications">Notificaciones</string>
    <string name="label_home">Home</string>
    <string name="label_activities">Actividad</string>
    <string name="label_show_news">VER NOTICIA</string>
    <string name="label_logout"><u>Cerrar sesión</u></string>
    <string name="label_register_hours">+ Registrar horas</string>
    <string name="label_client">Cliente</string>
    <string name="label_project">Proyecto</string>
    <string name="label_modify_client"><u>Cambiar</u></string>
    <string name="label_projects_title">¿En que proyecto trabajaste?</string>
    <string name="label_activities_title">¿Qué actividades hiciste?</string>
    <string name="label_hours_label">Horas trabajadas en el proyecto:</string>
    <string name="button_continue">Continuar</string>
    <string name="template_hours">%d horas</string>
    <string name="template_hrs">%d hrs</string>
    <string name="template_days">Tienes %s sin reportar tus actividades</string>
    <string name="label_recent">Recientes</string>
    <string name="label_news">Noticias</string>
    <string name="label_activity_added">Actividad agregada</string>
    <string name="template_activity_added">Se agrega la &quot;%s&quot;</string>

    <string name="error_connection_label">Error de conexión</string>
    <string name="error_serve_label">Algo salió mal</string>
    <string name="error_message">Intentalo nuevamente</string>
    <string name="try_again_label">Volver a intentar</string>

    <string name="label_al_continuar">Al continuar, aceptas nuestros</string>
    <string name="label_terms_conditions">Términos y condiciones</string>
    <string name="label_login_button">Comenzar con Google</string>
    <string name="label_login_welcome">Inicia sesión y se parte de NA-AT People</string>
    <string name="label_login_unete">Únete con tu cuenta NA-AT</string>
    <string name="label_login_dialog">El acceso a la aplicación, solo esta disponible para talento <b>NAAT</b> Ingresa con tu correo <b>@na-at.com.mx</b></string>
    <string name="label_finish">Finalizar</string>
    <string name="label_delete"><u>Eliminar</u></string>
    <string name="label_modify"><u>Modificar</u></string>
    <string name="label_add_more_hours"><u>Agregar más horas en otro proyecto</u></string>
    <string name="label_hours_worked_day">Horas trabajadas en el día:</string>
    <string name="label_register_total_hour">Registrar %d hora en el día</string>
    <string name="label_register_total_hours">Registrar %d horas en el día</string>
    <string name="label_char">|</string>
    <string name="hint_search_news">Buscar noticia</string>

</resources>