<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_view_delete_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="2dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/label_delete"
        android:textColor="@color/primary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/label_project"
        android:textColor="@color/gray_A6A6A6"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_modify_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/label_modify"
        android:textColor="@color/primary"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/label_char"
        android:textColor="@color/primary"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/text_view_delete_project"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_name_project_total"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="TextView"
        android:textColor="@color/black_333333"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view_activities_by_project"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_name_project_total" />
</androidx.constraintlayout.widget.ConstraintLayout>